# python-course

./: 2.md  README.md  more_exersices.md  pyproject.toml  references.md
01_introduction/: README.md
02_basics/: MAKEME.md  README.md  TRYME.py
02_explore/: MAKEME.ipynb  README.ipynb
02_jupyter_notebook/: MAKEME.ipynb
03_comprehensions/: MAKEME.md  TRYME.py
03_functions/: MAKEME.md  README.md  TRYME.py
03_pycharm/: MAKEME.py  README.md
04_comprehensions/: README.md
05_OOP/: MAKEME.md  TRYME.py
05_exceptions/: MAKEME.md  README.md  TRYME.py
05_io/: README.md  TRYME.py  some_text.txt
06_io/: README.md  TRYME.py
07_OOP/: MAKEME.md
07_io/: MAKEME.md  README.md  example.db
08_modules/: README.md  TRYME.py
09_OOP/: README.md
NumPy/: README.ipynb  README.md  Untitled.ipynb
Pandas/: README.ipynb
ai/01_welke_vragen_stel_je_chatgpt/: MAKEME.md  README.md  TRYME.py
ai/02_overzicht_modellen/: README.md
ai/03_mcp/: README.md  TRYME.py  github-mcp-server.js  mcp.json  package.json
ai/04_pydantic_ai/: MAKEME.md  README.md  TRYME.py
ai/05_copilot/: README.md
ai/06_object_detection/: MAKEME.md  README.md  SETUP.md  TRYME.py  TRYME_YOLO.py  alternatives.py  create_chair_video.py
ai/answers/: welke_vragen_stel_je_chatgpt.py
answers/: basics.py  exceptions.py  explore.ipynb  extra_functions.py  functions.py  pycharm.py
basics/: example_module.py
basics/01_introduction/: README.md
basics/02_basics/: MAKEME.md  (+3 more)
data_science/: README.md
debug/: MAKEME.py
explore/: MAKEME.ipynb  README.ipynb
extra_functions/: MAKEME.md  TRYME.py
(+55 files in other folders)
